# rpipins

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  qa.yml
debian/: changelog  control  copyright
debian/upstream/: metadata
rpipins/: __main__.py
